--- a/ui/MainWindow.ui
+++ b/ui/MainWindow.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>1278</width>
-    <height>629</height>
+    <height>631</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -459,7 +459,7 @@ border-color: rgb(114, 171, 171);</string>
                   <item>
                    <widget class="QToolButton" name="btn_regMat">
                     <property name="enabled">
-                     <bool>false</bool>
+                     <bool>true</bool>
                     </property>
                     <property name="sizePolicy">
                      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
