--- a/ui/ToolsWindow.ui
+++ b/ui/ToolsWindow.ui
@@ -426,7 +426,7 @@
    </palette>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Tool/Ref Coordinates</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <property name="spacing">
