--- a/ui/MainWin.ui
+++ b/ui/MainWin.ui
@@ -496,7 +496,7 @@ color: rgb(157, 205, 216);</string>
                   <number>0</number>
                  </property>
                  <attribute name="horizontalHeaderVisible">
-                  <bool>true</bool>
+                  <bool>false</bool>
                  </attribute>
                  <attribute name="horizontalHeaderCascadingSectionResizes">
                   <bool>true</bool>
@@ -514,7 +514,7 @@ color: rgb(157, 205, 216);</string>
                   <bool>true</bool>
                  </attribute>
                  <attribute name="verticalHeaderVisible">
-                  <bool>true</bool>
+                  <bool>false</bool>
                  </attribute>
                  <column>
                   <property name="text">
@@ -657,7 +657,7 @@ color: rgb(157, 205, 216);</string>
                   <enum>Qt::Vertical</enum>
                  </property>
                  <property name="sizeType">
-                  <enum>QSizePolicy::Fixed</enum>
+                  <enum>QSizePolicy::Expanding</enum>
                  </property>
                  <property name="sizeHint" stdset="0">
                   <size>
@@ -999,7 +999,7 @@ color: rgb(157, 205, 216);</string>
                     <string notr="true">background-color: rgb(45, 45, 45);</string>
                    </property>
                    <property name="minimum">
-                    <number>-7000</number>
+                    <number>-2000</number>
                    </property>
                    <property name="maximum">
                     <number>1000</number>
@@ -1092,7 +1092,7 @@ color: rgb(157, 205, 216);</string>
                     <string notr="true">background-color: rgb(45, 45, 45);</string>
                    </property>
                    <property name="minimum">
-                    <number>-7000</number>
+                    <number>-2000</number>
                    </property>
                    <property name="maximum">
                     <number>1000</number>
@@ -1104,7 +1104,7 @@ color: rgb(157, 205, 216);</string>
                     <number>100</number>
                    </property>
                    <property name="value">
-                    <number>250</number>
+                    <number>-600</number>
                    </property>
                    <property name="tracking">
                     <bool>false</bool>
@@ -1140,7 +1140,7 @@ color: rgb(157, 205, 216);</string>
                     <string notr="true">color: rgb(157, 205, 216);</string>
                    </property>
                    <property name="text">
-                    <string>250</string>
+                    <string>-600</string>
                    </property>
                    <property name="alignment">
                     <set>Qt::AlignCenter</set>
@@ -1596,7 +1596,7 @@ color: rgb(157, 205, 216);</string>
                   <string notr="true">background-color: rgb(65, 65, 65);</string>
                  </property>
                  <property name="text">
-                  <string>Start Record</string>
+                  <string>   Start Record</string>
                  </property>
                  <property name="icon">
                   <iconset resource="resources.qrc">
@@ -1702,7 +1702,7 @@ border-color: rgb(114, 171, 171);</string>
                   <enum>QTabWidget::Rounded</enum>
                  </property>
                  <property name="currentIndex">
-                  <number>1</number>
+                  <number>0</number>
                  </property>
                  <property name="iconSize">
                   <size>
@@ -3254,6 +3254,38 @@ border-color: rgb(114, 171, 171);</string>
     <hint type="destinationlabel">
      <x>284</x>
      <y>531</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>slider_threshold3D</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>lbl_threshold3D</receiver>
+   <slot>setNum(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>196</x>
+     <y>280</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>311</x>
+     <y>280</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>slider_threshold3D_2</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>lbl_threshold3D_2</receiver>
+   <slot>setNum(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>198</x>
+     <y>311</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>311</x>
+     <y>311</y>
     </hint>
    </hints>
   </connection>
